Fix for Warnings/Errors

--- a/Chapter 2 - Hamiltonian Problem Representation.ipynb
+++ b/Chapter 2 - Hamiltonian Problem Representation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c5159c5f",
    "metadata": {},
    "outputs": [
@@ -15,14 +15,6 @@
       "- 3.0 * IZ\n",
       "+ 1.0 * ZZ\n",
       "+ 5.0 * II\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_1083/2650245802.py:9: DeprecationWarning: The ``qiskit.opflow`` module is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit https://qisk.it/opflow_migration.\n",
-      "  from qiskit.opflow import Z, I\n"
      ]
     }
    ],
@@ -39,6 +31,9 @@
     "# We recommend using the latest version from the book code repository at:\n",
     "# https://github.com/pedroer/quantum-computing-for-engineers/blob/main/requirements.txt\n",
     "from qiskit.opflow import Z, I\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "# Hamiltonian: H = -2 * Z ^ I - 3 * I ^ Z + (Z ^ Z) + 5 * (I ^ I)\n",
     "# Z ^ I: Pauli ZZ acts on qubit 0, and identity II acts on qubit 1.\n",
     "# I ^ Z: Identity II acts on qubit 0, and Pauli ZZ acts on qubit 1.\n",
