--- a/Chapter 2 - Quantum Neural Network - QNN.ipynb
+++ b/Chapter 2 - Quantum Neural Network - QNN.ipynb
@@ -10,15 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QNN Output: [[0.1086651]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_6337/696197482.py:17: DeprecationWarning: The class ``qiskit.utils.quantum_instance.QuantumInstance`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit https://qisk.it/qi_migration.\n",
-      "  quantum_instance=QuantumInstance(Aer.get_backend('statevector_simulator'))\n"
+      "QNN Output: [[-0.49002426]]\n"
      ]
     }
    ],
@@ -40,6 +32,8 @@
     "from qiskit_machine_learning.neural_networks import TwoLayerQNN\n",
     "from qiskit import Aer\n",
     "from qiskit.utils import QuantumInstance\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "#-------------------------------------------------------------------------\n",
     "\n",
     "quantum_instance=QuantumInstance(Aer.get_backend('statevector_simulator'))\n",
