--- a/Chapter 2 - Variational Quantum Eigensolver - VQE.ipynb
+++ b/Chapter 2 - Variational Quantum Eigensolver - VQE.ipynb
@@ -2,25 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "06c2dc9e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_10915/401657636.py:11: DeprecationWarning: The ``qiskit.opflow`` module is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit https://qisk.it/opflow_migration.\n",
-      "  from qiskit.opflow import Z, I\n",
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_10915/401657636.py:27: DeprecationWarning: The class ``qiskit.algorithms.minimum_eigen_solvers.vqe.VQE`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. Instead, use the class ``qiskit.algorithms.minimum_eigensolvers.VQE``. See https://qisk.it/algo_migration for a migration guide.\n",
-      "  vqe = VQE(ansatz, optimizer=optimizer, quantum_instance=simulator)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VQE Energy: (-0.9999999860110819+0j)\n"
+      "VQE Energy: (-0.9999999971894871+0j)\n"
      ]
     }
    ],
@@ -43,6 +33,8 @@
     "\n",
     "from qiskit.algorithms import VQE\n",
     "from qiskit.algorithms.optimizers import COBYLA\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "#-------------------------------------------------------------------------\n",
     "\n",
     "# Define the Hamiltonian\n",
