--- a/Chapter 5 - Quantum Neural Network - QNN.ipynb
+++ b/Chapter 5 - Quantum Neural Network - QNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "0b9f1c28",
    "metadata": {},
    "outputs": [
@@ -10,15 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QNN Output: [[-0.64056737]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_31987/888608617.py:17: DeprecationWarning: The class ``qiskit.utils.quantum_instance.QuantumInstance`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit https://qisk.it/qi_migration.\n",
-      "  quantum_instance=QuantumInstance(Aer.get_backend('statevector_simulator'))\n"
+      "QNN Output: [[-0.34409462]]\n"
      ]
     }
    ],
@@ -40,6 +32,8 @@
     "from qiskit_machine_learning.neural_networks import TwoLayerQNN\n",
     "from qiskit import Aer\n",
     "from qiskit.utils import QuantumInstance\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "#-------------------------------------------------------------------------\n",
     "\n",
     "quantum_instance=QuantumInstance(Aer.get_backend('statevector_simulator'))\n",
@@ -64,14 +58,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e93c004c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e0761dc-6ff3-42a4-989e-bb6aa5fef030",
    "metadata": {},
    "outputs": [],
    "source": []
