--- a/Chapter 5 - Variational Quantum Eigensolver - VQE.ipynb
+++ b/Chapter 5 - Variational Quantum Eigensolver - VQE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "afc252ba",
    "metadata": {},
    "outputs": [
@@ -10,15 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VQE Energy: (-0.9999999884274738+0j)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_33820/3841172420.py:27: DeprecationWarning: The class ``qiskit.algorithms.minimum_eigen_solvers.vqe.VQE`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. Instead, use the class ``qiskit.algorithms.minimum_eigensolvers.VQE``. See https://qisk.it/algo_migration for a migration guide.\n",
-      "  vqe = VQE(ansatz, optimizer=optimizer, quantum_instance=simulator)\n"
+      "VQE Energy: (-0.9999999981767623+0j)\n"
      ]
     }
    ],
@@ -41,6 +33,8 @@
     "\n",
     "from qiskit.algorithms import VQE\n",
     "from qiskit.algorithms.optimizers import COBYLA\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "#-------------------------------------------------------------------------\n",
     "\n",
     "# Define the Hamiltonian\n",
@@ -63,14 +57,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "373c2814",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce97002a-85bc-4404-8d54-57c5604c348b",
    "metadata": {},
    "outputs": [],
    "source": []
