--- a/Chapter 6 - Beam Design Optimization.ipynb
+++ b/Chapter 6 - Beam Design Optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a1e5f418",
    "metadata": {},
    "outputs": [
@@ -19,27 +19,11 @@
       "\n",
       "Classical Optimization Result:\n",
       "Optimized Material Distribution: [-220.02585503 -496.30817407  -81.88469551 -827.84695732]\n",
-      "Minimum Cost: -7154.9633559369\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_38999/1835217368.py:93: DeprecationWarning: The class ``qiskit.utils.quantum_instance.QuantumInstance`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit https://qisk.it/qi_migration.\n",
-      "  quantum_instance = QuantumInstance(backend)\n",
-      "/tmp/ipykernel_38999/1835217368.py:95: DeprecationWarning: The class ``qiskit.algorithms.minimum_eigen_solvers.qaoa.QAOA`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. Instead, use the class ``qiskit.algorithms.minimum_eigensolvers.QAOA``. See https://qisk.it/algo_migration for a migration guide.\n",
-      "  qaoa = QAOA(quantum_instance=quantum_instance, reps=3)  # Use 3 QAOA repetitions\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Minimum Cost: -7154.9633559369\n",
       "\n",
       "Quantum Optimization Result (QAOA):\n",
-      "Optimized Material Distribution (QAOA Approximation): [0.2857142857142857, 0.0, 0.0, 0.0]\n",
-      "Minimum Cost (QAOA): 0.45714285714285713\n"
+      "Optimized Material Distribution (QAOA Approximation): [0.0, 0.0, 0.5714285714285714, 0.0]\n",
+      "Minimum Cost (QAOA): 0.3428571428571428\n"
      ]
     }
    ],
@@ -68,6 +52,8 @@
     "import qiskit\n",
     "import scipy\n",
     "from scipy.optimize import minimize\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "# Check for Qiskit Optimization installation\n",
     "try:\n",
