--- a/Chapter 6 - More complete implementation of QAOA.ipynb
+++ b/Chapter 6 - More complete implementation of QAOA.ipynb
@@ -10,21 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal parameters: gamma=-0.4431, beta=-0.7853\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_52783/3506713452.py:71: DeprecationWarning: The class ``qiskit.utils.quantum_instance.QuantumInstance`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit https://qisk.it/qi_migration.\n",
-      "  quantum_instance = QuantumInstance(backend=Aer.get_backend('statevector_simulator'))\n",
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_52783/3506713452.py:42: DeprecationWarning: The class ``qiskit.opflow.state_fns.circuit_state_fn.CircuitStateFn`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit https://qisk.it/opflow_migration.\n",
-      "  ansatz_op = StateFn(qc)\n",
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_52783/3506713452.py:46: DeprecationWarning: The class ``qiskit.opflow.state_fns.operator_state_fn.OperatorStateFn`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit https://qisk.it/opflow_migration.\n",
-      "  operator = ~StateFn(H_C) @ ansatz_op\n",
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_52783/3506713452.py:49: DeprecationWarning: The class ``qiskit.opflow.converters.circuit_sampler.CircuitSampler`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit https://qisk.it/opflow_migration.\n",
-      "  sampler = CircuitSampler(quantum_instance).convert(operator)\n"
+      "Optimal parameters: gamma=-0.4487, beta=-0.7853\n"
      ]
     }
    ],
@@ -48,6 +34,8 @@
     "from qiskit.utils import QuantumInstance\n",
     "from qiskit.opflow import PauliSumOp, StateFn, AerPauliExpectation, CircuitSampler\n",
     "from qiskit.visualization import plot_histogram\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "#-------------------------------------------------------------------\n",
     "\n",
     "#-------------------------------------------------------------------\n",
