--- a/Chapter 6 - Variational Quantum Classifier.ipynb
+++ b/Chapter 6 - Variational Quantum Classifier.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "d45c9732",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_82796/3185097830.py:13: DeprecationWarning: The ``qiskit.opflow`` module is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit https://qisk.it/opflow_migration.\n",
-      "  from qiskit.opflow import Z, StateFn, CircuitStateFn\n",
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_82796/3185097830.py:37: DeprecationWarning: The class ``qiskit.opflow.state_fns.operator_state_fn.OperatorStateFn`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit https://qisk.it/opflow_migration.\n",
-      "  result = StateFn(Z, is_measurement=True) @ CircuitStateFn(qc_data)\n",
-      "/var/folders/z3/sk2c0q6j5jqfyd9r8pm2_vrr0000gp/T/ipykernel_82796/3185097830.py:37: DeprecationWarning: The class ``qiskit.opflow.state_fns.circuit_state_fn.CircuitStateFn`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit https://qisk.it/opflow_migration.\n",
-      "  result = StateFn(Z, is_measurement=True) @ CircuitStateFn(qc_data)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -44,6 +32,8 @@
     "from qiskit.circuit import Parameter\n",
     "from qiskit.opflow import Z, StateFn, CircuitStateFn\n",
     "from qiskit.algorithms.optimizers import COBYLA\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "#-------------------------------------------------------------------------\n",
     "\n",
     "def create_pqc(theta_val):\n",
